--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Popup</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200;300;400;500&family=Roboto+Serif:wght@200;300;400;500&family=Roboto:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>COMO(Coin Extension) ver1.1</title>
   </head>
 
   <body>
