deleting legacy code

--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <title>COMO(Coin Extension) ver1.1</title>
+    <title>COMO(Coin Extension) - ver1.1</title>
   </head>
 
   <body>
